--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Practicando Git con Shuo</h1>
-    <p>Hola mundo</p>
+    <p>Conjunto ordenado de operaciones sistemáticas
+         que permite hacer un cálculo y hallar la solución de un tipo de problemas.</p>
 </body>  
 </html>
