se agrego un segundo parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Practicando Git con Shuo</h1>
     <p>Conjunto ordenado de operaciones sistemáticas
          que permite hacer un cálculo y hallar la solución de un tipo de problemas.</p>
+         <p>Jesus medina me esta enseñando git a base de sus videos en youtube, shiri esta acostado</p>
 </body>  
 </html>
